# ttf-rs

./: ARCHITECTURE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  SPEC.md  TODO.md
examples/: basic.rs  character_mapping.rs  comprehensive.rs  demo.rs  font_metrics.rs  full_showcase.rs  glyph_info.rs  glyph_metrics.rs  modify_font.rs  save_font.rs  table_inspector.rs
src/: cached.rs  error.rs  font.rs  lib.rs  modifier.rs  rasterizer.rs  stream.rs  subset.rs  tables.rs  validation.rs  woff.rs
src/tables/: avar.rs  base.rs  cbdt.rs  cmap.rs  colr.rs  cpal.rs  cvt.rs  fpgm.rs  fvar.rs  glyf.rs  gpos.rs  gsub.rs  gvar.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  jstf.rs  kern.rs  loca.rs  maxp.rs  name.rs  os2.rs  post.rs  prep.rs  sbix.rs  stat.rs  svg.rs
tests/: comprehensive_tests.rs  integration_tests.rs  modifier_tests.rs  modifier_tests_helper.rs  stream_tests.rs  table_tests.rs
